--- a/src/components/studentsign.html
+++ b/src/components/studentsign.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 <div class="form1">
-    <form name="studlng" action="php/studdb.php" onsubmit="return validateForm()" method="post">
+    <form name="studlng" action="studdb.jsp" onsubmit="return validateForm()" method="post">
         <label for="idno">ID</label>
         <input type="number",id="idno", name="idno"><br>
         <label for="passwd">Password</label>
@@ -17,16 +17,18 @@
         <input type="text",id="mname", name="mname">
         <label for="sname">Surame</label>
         <input type="text",id="sname", name="sname"><br>
+    <div class="rdo">
         <label for="classi">Class I</label>
-        <input type="radio",id="classi", name="I", value="Class I">
+        <input type="radio",id="classi", name="class", value="Class I">
         <label for="classii">Class II</label>
-        <input type="radio",id="classii", name="II", value="Class II">
+        <input type="radio",id="classii", name="class", value="Class II">
         <label for="classiii">Class III</label>
-        <input type="radio",id="classiii", name="III", value="Class III">
+        <input type="radio",id="classiii", name="class", value="Class III">
         <label for="classiv">Class IV</label>
-        <input type="radio",id="classiv", name="IV", value="Class IV">
+        <input type="radio",id="classiv", name="class", value="Class IV">
         <label for="classv">Class V</label>
-        <input type="radio",id="classv", name="V", value="Class V"><br>
+        <input type="radio",id="classv", name="class", value="Class V"><br>
+    </div>
     </form>
     </div>
     <div class="submit">
@@ -34,6 +36,7 @@
     </div>
         <script>
             function validateForm() {
+                
                 var idno = document.forms["studlgn"]["idno"].value;
                 if (idno == "") {
                     alert("ID must be filled out");
@@ -67,3 +70,4 @@
 
     </form>
 </body>
+</html>
